# microstocks

./: .gitignore  meson.build  org.gnome.Microstocks.json
data/: meson.build  org.gnome.Microstocks.appdata.xml.in  org.gnome.Microstocks.desktop.in  org.gnome.Microstocks.gschema.xml
po/: POTFILES  meson.build
src/: app-menu.ui  main.c  meson.build  microstocks-app.c  microstocks-app.h  microstocks-window.c  microstocks-window.h  microstocks-window.ui  microstocks.gresource.xml  node-tree.h  tree-node.c  tree-node.h
tests/: meson.build  parser.c  test-application-exit-success.c  test-application.c  test-validate-org-gnome-microstocks-json.c
